--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-psutil>=5.9.0
-pywin32>=306; sys_platform == "win32"
-WMI>=1.5.1; sys_platform == "win32"
-tinytuya>=1.2.10
-python-dotenv>=1.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
+python-dotenv==1.0.0
+tinytuya
+pydantic==2.5.0
+python-multipart==0.0.6
+loguru==0.7.2
