--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,11 @@ version: '3.8'
 services:
   tuya-smartplug:
     build: .
-    container_name: local-tuya-smartplug-dev
+    
+    container_name: local-tuya-smartplug
     restart: unless-stopped
-    env_file:
-      - .env
-    volumes:
-      - ./:/app:delegated
-      - ./logs:/app/logs
-      - ./config:/app/config:ro
     ports:
-      - "8000:8000"
-    environment:
-      - LOGS_FOLDER=/app/logs
+      - "8001:8000"
     networks:
       - tuya-network
 
