--- a/config/device_mapping.json
+++ b/config/device_mapping.json
@@ -1,5 +1,5 @@
 {
-  "DEFAULT": {
+  "DESKTOP-4841M28": {
     "device_id": "eb03814051c8508cdbhtal",
     "device_ip": "192.168.10.157",
     "local_key": "|{8Di7oz:Glj$lQF"
